terraform-crm-blue-green/files/artifacts/rnd/Green/pub-alb-ingress-crm-subsys-rnd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:056200465002:certificate/e2bdc33a-7ba2-4571-bc3f-dacbc4838c3c
    alb.ingress.kubernetes.io/group.name: pub-crmsubsys-rnd
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-087722b14bc1b054d, subnet-0cc9419e34d9b1ac9, subnet-06fa430e02bb1564b
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: pub-alb-ingress-crm-subsys-rnd
  namespace: alb-rnd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /loadpage/*
        pathType: ImplementationSpecific
